--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Example node app on Heroku",
   "main": "web.js",
+  "engines": {
+    "node": "0.10.24"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
